tests/invalid/MethodCall_Invalid_3.whiley
method main(int[] _this) :
    _this.f(1)
